# csv-xlsx-langchain-agents

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/97fb88ad-391b-4d5d-8276-55ae57fbd732/: analytics_data.xlsx  data.db
data/e5626c72-555d-40c6-9a2c-91951da6a0ad/: data.db
frontend/: main.py  requirements.txt
sample_data/: ecommerce_transactions.csv  script.py
src/: .env.example
src/app/: config.py  main.py
src/app/agents/: __init__.py
src/app/agents/agent/: chart_agent.py  main_agent.py  sql_agent.py
src/app/agents/prompt/: __init__.py  chart_prompt.py  main_prompt.py  sql_prompt.py  sql_validation_prompt.py
src/app/agents/tools/: __init__.py  chart_tools.py  sql_tools.py
src/app/api/routers/: chat.py  upload.py
src/app/api/schema/: chat.py  upload.py
src/app/core/: llm.py
src/app/services/: database.py
src/app/utils/: __init__.py  chart_helpers.py  logger.py  sql_helpers.py  sql_validation.py
