[project]
name = "csv-xlsx-langchain-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.1.3",
    "langchain-core>=1.1.2",
    "langchain-openai>=1.1.1",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.52.1",
]
